// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform types Should transform css modules 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

require(\\"./component.scss\\");

var _cssx = require(\\"@whatsup/cssx\\");

const styles_UniqueId = {
  \\"col_2_1\\": \\"component__col_2_1\\",
  \\"col_1_3\\": \\"component__col_1_3\\",
  \\"button\\": \\"component__button\\",
  \\"active\\": \\"component__active\\",
  \\"red\\": \\"component__red\\"
};
const styles = styles_UniqueId;

var _default = () => {
  styles;
};

exports.default = _default;"
`;

exports[`transform types Should transform cssx 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

require(\\"./component.scss\\");

var _cssx = require(\\"@whatsup/cssx\\");

const styles_UniqueId = {
  \\"col_2_1\\": \\"component__col_2_1\\",
  \\"col_1_3\\": \\"component__col_1_3\\",
  \\"button\\": \\"component__button\\",
  \\"active\\": \\"component__active\\",
  \\"red\\": \\"component__red\\"
};
const Div = (0, _cssx.createComponent)(\\"div\\", styles_UniqueId);
const Span = (0, _cssx.createComponent)(\\"span\\", styles_UniqueId);

var _default = () => {
  Div;
  Span;
};

exports.default = _default;"
`;

exports[`transform types Should transform mixed 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

require(\\"./component.scss\\");

var _cssx = require(\\"@whatsup/cssx\\");

const styles_UniqueId = {
  \\"col_2_1\\": \\"component__col_2_1\\",
  \\"col_1_3\\": \\"component__col_1_3\\",
  \\"button\\": \\"component__button\\",
  \\"active\\": \\"component__active\\",
  \\"red\\": \\"component__red\\"
};
const styles = styles_UniqueId;
const Div = (0, _cssx.createComponent)(\\"div\\", styles_UniqueId);
const Span = (0, _cssx.createComponent)(\\"span\\", styles_UniqueId);

var _default = () => {
  styles;
  Div;
  Span;
};

exports.default = _default;"
`;

exports[`transform types Should transform simle css 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

require(\\"./component.css\\");

var _cssx = require(\\"@whatsup/cssx\\");

const styles_UniqueId = {
  \\"button\\": \\"component__button\\",
  \\"active\\": \\"component__active\\",
  \\"red\\": \\"component__red\\"
};
const styles = styles_UniqueId;
const Div = (0, _cssx.createComponent)(\\"div\\", styles_UniqueId);
const Span = (0, _cssx.createComponent)(\\"span\\", styles_UniqueId);

var _default = () => {
  styles;
  Div;
  Span;
};

exports.default = _default;"
`;
